second step in creating creating the clock

--- a/git.htm
+++ b/git.htm
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="outter-circle">
+    <div class="inner-circle"></div>
+    </div>
 </body>
 </html>
