--- a/git.htm
+++ b/git.htm
@@ -4,10 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="git.css" rel="stylesheet">
 </head>
 <body>
     <div class="outter-circle">
-    <div class="inner-circle"></div>
+    <div class="inner-circle">
+    <span class="one">1</span>
+    <span class="two">2</span>
+    <span class="three">3</span>
+    <span class="four">4</span>
+    <span class="five">5</span>
+    <span class="six">6</span>
+    <span class="seven">7</span>
+    <span class="eight">8</span>
+    <span class="nine">9</span>
+    <span class="ten">10</span>
+    <span class="eleven">11</span>
+    <span class="twelve">12</span>
+    </div>
     </div>
 </body>
 </html>
