fifth time of completing this code

--- a/git.htm
+++ b/git.htm
@@ -21,6 +21,9 @@
     <span class="ten">10</span>
     <span class="eleven">11</span>
     <span class="twelve">12</span>
+    <span class="point">.</span>
+    <span class="l-hand">____</span>
+    <span class="s-hand">___</span>
     </div>
     </div>
 </body>
