sixth time completing this code

--- a/git.htm
+++ b/git.htm
@@ -8,7 +8,6 @@
 </head>
 <body>
     <div class="outter-circle">
-    <div class="inner-circle">
     <span class="one">1</span>
     <span class="two">2</span>
     <span class="three">3</span>
@@ -21,9 +20,10 @@
     <span class="ten">10</span>
     <span class="eleven">11</span>
     <span class="twelve">12</span>
-    <span class="point">.</span>
-    <span class="l-hand">____</span>
-    <span class="s-hand">___</span>
+    <div class="inner-circle">
+    <span class="point">&#9679</span>
+    <hr class="s-hand">
+        <hr class="l-hand">
     </div>
     </div>
 </body>
