seveth time completing the code

--- a/git.htm
+++ b/git.htm
@@ -19,12 +19,15 @@
     <span class="nine">9</span>
     <span class="ten">10</span>
     <span class="eleven">11</span>
+
     <span class="twelve">12</span>
     <div class="inner-circle">
     <span class="point">&#9679</span>
     <hr class="s-hand">
-        <hr class="l-hand">
+    <hr class="l-hand">
     </div>
     </div>
+
+    <script src="git.js"></script>
 </body>
 </html>
